// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary component correctly with multiple expenses 1`] = `
<Fragment>
  <h1>
    Viewing 
    12
     
    expenses
     totalling 
    $15,001.95
  </h1>
</Fragment>
`;

exports[`should render expenses summary component correctly with single expense 1`] = `
<Fragment>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </h1>
</Fragment>
`;
